# demo

./: .gitignore  Q&A.md  README.md  claude_desktop_config.json  pom.xml
.github/: copilot-instructions.md
mydemo/: README.md  pom.xml
mydemo/data/: trades.mv.db
mydemo/src/main/java/com/example/demo/controller/: TradeController.java
src/main/java/com/example/mcpserver/dto/: TradeDto.java
src/main/java/com/example/mcpserver/entity/: Trade.java
src/main/java/com/example/mcpserver/service/: TradeMcpService.java
src/main/resources/: application.yml
src/main/resources/scripts/: DB_Design.md  ExplainSqlAchemy.md  ExplainSqlModel.md  class_design.drawio.xml  corporate_takeover_app_schema.drawio.xml  corporate_takeover_app_schema.vsdx  corporate_takeover_designs.vsdx  corporate_takeover_postgres_db.erd  high_level_architecture.drawio.xml  low_level_components.drawio.xml  sqlAlchemy1.md  sqlmodel.md
src/main/resources/scripts/company-ref-pure-uv/: .coverage  .env  Procfile  README.md  pyproject.toml  raw_async.md  run_tests.py  sql_model.md
src/main/resources/scripts/company-ref-pure-uv/.github/workflows/: deploy.yml
src/main/resources/scripts/company-ref-pure-uv/app/: db.py  main.py  models.py  utils.py
src/main/resources/scripts/company-ref-pure-uv/app/repository/: company_repository.py
src/main/resources/scripts/company-ref-pure-uv/app/routers/: companies.py
src/main/resources/scripts/company-ref-pure-uv/app/services/: company_service.py
src/main/resources/scripts/company-ref-pure-uv/company_ref.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/main/resources/scripts/company-ref-pure-uv/tests/: conftest.py  test_api.py  test_api_fixed.py  test_repository.py  test_service.py  test_utils.py
(+3 files in other folders)
